<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>ohmdb</groupId>
    <artifactId>parent</artifactId>
    <version>0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>ohmdb</module>
        <module>ohmdb-client</module>
        <module>hbase-common</module>
        <module>hbase-hadoop-compat</module>
        <module>hbase-protocol</module>
    </modules>

    <properties>
        <guava.version>14.0.1</guava.version>
        <log4j.version>1.2.17</log4j.version>
        <!--<junit.version>4.8.1</junit.version>-->
        <junit.version>4.11</junit.version>
        <slf4j-api.version>1.7.4</slf4j-api.version>
        <netty.version>4.0.10.Final</netty.version>
        <protobuf.version>2.5.0</protobuf.version>
        <metrics-core.version>3.0.0</metrics-core.version>
        <hbase.version>0.96.0</hbase.version>

        <yammer-metrics-core.version>2.1.2</yammer-metrics-core.version>


        <!-- Dependencies -->
        <hadoop-two.version>2.2.0</hadoop-two.version>
        <hadoop-one.version>1.1.2</hadoop-one.version>
        <commons-cli.version>1.2</commons-cli.version>
        <commons-codec.version>1.7</commons-codec.version>
        <!-- pretty outdated -->
        <commons-io.version>2.4</commons-io.version>
        <commons-lang.version>2.6</commons-lang.version>
        <commons-logging.version>1.1.1</commons-logging.version>
        <commons-math.version>2.2</commons-math.version>
        <collections.version>3.2.1</collections.version>
        <httpclient.version>3.1</httpclient.version>
        <!-- hbase version, been upgraded since -->
        <!--<metrics-core.version>2.1.2</metrics-core.version>-->

        <!-- hbase version, been upgraded above -->
        <!--<guava.version>12.0.1</guava.version>-->

        <jackson.version>1.8.8</jackson.version>
        <jasper.version>5.5.23</jasper.version>
        <jaxb-api.version>2.2.2</jaxb-api.version>
        <jetty.version>6.1.26</jetty.version>
        <jetty.jspapi.version>6.1.14</jetty.jspapi.version>
        <jersey.version>1.8</jersey.version>
        <jruby.version>1.6.8</jruby.version>
        <!--<junit.version>4.11</junit.version>-->
        <htrace.version>2.01</htrace.version>
        <log4j.version>1.2.17</log4j.version>
        <mockito-all.version>1.9.0</mockito-all.version>
        <!--<protobuf.version>2.5.0</protobuf.version>-->
        <stax-api.version>1.0.1</stax-api.version>
        <thrift.version>0.9.0</thrift.version>
        <zookeeper.version>3.4.5</zookeeper.version>
        <!--<slf4j.version>1.6.4</slf4j.version>-->
        <hadoop-snappy.version>0.0.1-SNAPSHOT</hadoop-snappy.version>
        <clover.version>2.6.3</clover.version>
        <jamon-runtime.version>2.3.1</jamon-runtime.version>
        <jettison.version>1.3.1</jettison.version>
        <!--<netty.version>3.6.6.Final</netty.version>-->
        <!-- Plugin Dependencies -->
        <maven.assembly.version>2.4</maven.assembly.version>
        <maven.antrun.version>1.6</maven.antrun.version>
        <jamon.plugin.version>2.3.4</jamon.plugin.version>
        <findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version>
        <findbugs-annotations>1.3.9-1</findbugs-annotations>
        <maven.site.version>3.3</maven.site.version>
        <javadoc.version>2.9</javadoc.version>
        <maven.resources.plugin.version>2.6</maven.resources.plugin.version>

        <!-- test junk, this seems too complex -->
        <surefire.version>2.12-TRUNK-HBASE-2</surefire.version>
        <surefire.provider>surefire-junit47</surefire.provider>
        <!-- default: run small & medium, medium with 2 threads -->
        <surefire.skipFirstPart>false</surefire.skipFirstPart>
        <surefire.skipSecondPart>false</surefire.skipSecondPart>
        <surefire.firstPartForkMode>once</surefire.firstPartForkMode>
        <surefire.firstPartParallel>classes</surefire.firstPartParallel>
        <surefire.firstPartThreadCount>1</surefire.firstPartThreadCount>
        <surefire.secondPartThreadCount>2</surefire.secondPartThreadCount>
        <surefire.firstPartGroups>org.apache.hadoop.hbase.SmallTests</surefire.firstPartGroups>
        <surefire.secondPartGroups>org.apache.hadoop.hbase.MediumTests</surefire.secondPartGroups>
        <test.output.tofile>true</test.output.tofile>
        <surefire.timeout>900</surefire.timeout>

    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>ghelmling.testing</id>
            <name>Gary Helmling test repo</name>
            <url>http://people.apache.org/~garyh/mvn/</url>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </pluginRepository>
    </pluginRepositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.0</version>

                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                    <compilerArgument>-Xlint:-options</compilerArgument>
                </configuration>
            </plugin>
        </plugins>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>jar-no-fork</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <executions>
                        <execution>
                            <phase>prepare-package</phase>
                            <goals>
                                <!--This goal will install a -test.jar when we do install
                                    See http://maven.apache.org/guides/mini/guide-attached-tests.html
                                 -->
                                <goal>test-jar</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <excludes>
                            <exclude>hbase-site.xml</exclude>
                            <exclude>hdfs-site.xml</exclude>
                            <exclude>log4j.properties</exclude>
                            <exclude>mapred-queues.xml</exclude>
                            <exclude>mapred-site.xml</exclude>
                            <exclude>zoo.cfg</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                    <dependencies>
                        <!-- by default surefire selects dynamically the connector to the unit tests
                          tool. We want to use always the same as the different connectors can have different
                          bugs and behaviour. -->
                        <dependency>
                            <groupId>org.apache.maven.surefire</groupId>
                            <artifactId>${surefire.provider}</artifactId>
                            <version>${surefire.version}</version>
                        </dependency>
                    </dependencies>
                    <!-- Generic testing configuration for all packages -->
                    <configuration>
                        <failIfNoTests>false</failIfNoTests>
                        <skip>${surefire.skipFirstPart}</skip>
                        <forkMode>${surefire.firstPartForkMode}</forkMode>
                        <parallel>${surefire.firstPartParallel}</parallel>
                        <perCoreThreadCount>false</perCoreThreadCount>
                        <threadCount>${surefire.firstPartThreadCount}</threadCount>
                        <parallel>classes</parallel>
                        <!-- surefire hack, if not we're
                          using method parallelization class ! -->
                        <testFailureIgnore>false</testFailureIgnore>
                        <forkedProcessTimeoutInSeconds>${surefire.timeout}</forkedProcessTimeoutInSeconds>
                        <argLine>-enableassertions -Xmx1900m -XX:MaxPermSize=100m -Djava.security.egd=file:/dev/./urandom -Djava.net.preferIPv4Stack=true -Djava.awt.headless=true</argLine>
                        <redirectTestOutputToFile>${test.output.tofile}</redirectTestOutputToFile>
                    </configuration>
                    <executions>
                        <execution>
                            <id>secondPartTestsExecution</id>
                            <phase>test</phase>
                            <goals>
                                <goal>test</goal>
                            </goals>
                            <configuration>
                                <skip>${surefire.skipSecondPart}</skip>
                                <testFailureIgnore>false</testFailureIgnore>
                                <forkMode>perThread</forkMode>
                                <perCoreThreadCount>false</perCoreThreadCount>
                                <threadCount>${surefire.secondPartThreadCount}</threadCount>
                                <parallel>classes</parallel>
                                <!-- surefire hack, if not we're using method
                                  parallelisation class ! -->
                                <groups>${surefire.secondPartGroups}</groups>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>



    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.netty</groupId>
                <artifactId>netty-all</artifactId>
                <version>${netty.version}</version>
            </dependency>
            <dependency>
                <groupId>ohmdb</groupId>
                <artifactId>ohmdb-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ohmdb</groupId>
                <artifactId>hbase-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ohmdb</groupId>
                <artifactId>hbase-common</artifactId>
                <version>${project.version}</version>
                <type>test-jar</type>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>ohmdb</groupId>
                <artifactId>hbase-protocol</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>ohmdb</groupId>
                <artifactId>hbase-hadoop-compat</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.codahale.metrics</groupId>
                <artifactId>metrics-core</artifactId>
                <version>${metrics-core.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-collections</groupId>
                <artifactId>commons-collections</artifactId>
                <version>${collections.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-codec</groupId>
                <artifactId>commons-codec</artifactId>
                <version>${commons-codec.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-lang</groupId>
                <artifactId>commons-lang</artifactId>
                <version>${commons-lang.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-logging</groupId>
                <artifactId>commons-logging</artifactId>
                <version>${commons-logging.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${protobuf.version}</version>
            </dependency>
            <dependency>
                <groupId>com.yammer.metrics</groupId>
                <artifactId>metrics-core</artifactId>
                <version>${yammer-metrics-core.version}</version>
            </dependency>

            <dependency>
                <groupId>log4j</groupId>
                <artifactId>log4j</artifactId>
                <version>${log4j.version}</version>
            </dependency>
            <!-- Test dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-all</artifactId>
                <version>${mockito-all.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>com.github.stephenc.findbugs</groupId>
            <artifactId>findbugs-annotations</artifactId>
            <version>${findbugs-annotations}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
        </dependency>
        <!-- Test dependencies -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>hadoop-1.1</id>
            <activation>
                <property>
                    <!--Below formatting for dev-support/generate-hadoopX-poms.sh-->
                    <!--h1--><name>!hadoop.profile</name>
                </property>
            </activation>
            <modules>
                <module>hbase-hadoop1-compat</module>
            </modules>
            <properties>
                <hadoop.version>${hadoop-one.version}</hadoop.version>
                <compat.module>hbase-hadoop1-compat</compat.module>
                <assembly.file>src/main/assembly/hadoop-one-compat.xml</assembly.file>
            </properties>
            <dependencyManagement>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.hadoop</groupId>
                        <artifactId>hadoop-core</artifactId>
                        <version>${hadoop.version}</version>
                        <optional>true</optional>
                        <exclusions>
                            <exclusion>
                                <groupId>hsqldb</groupId>
                                <artifactId>hsqldb</artifactId>
                            </exclusion>
                            <exclusion>
                                <groupId>net.sf.kosmosfs</groupId>
                                <artifactId>kfs</artifactId>
                            </exclusion>
                            <exclusion>
                                <groupId>org.eclipse.jdt</groupId>
                                <artifactId>core</artifactId>
                            </exclusion>
                            <exclusion>
                                <groupId>net.java.dev.jets3t</groupId>
                                <artifactId>jets3t</artifactId>
                            </exclusion>
                            <exclusion>
                                <groupId>oro</groupId>
                                <artifactId>oro</artifactId>
                            </exclusion>
                        </exclusions>
                    </dependency>
                    <dependency>
                        <groupId>org.apache.hadoop</groupId>
                        <artifactId>hadoop-test</artifactId>
                        <version>${hadoop.version}</version>
                        <optional>true</optional>
                        <scope>test</scope>
                    </dependency>
                </dependencies>
            </dependencyManagement>
        </profile>
    </profiles>
</project>
